# decomposer

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  aggregator.cpp  aggregator.hpp  edge.hpp  graph.cpp  graph.hpp  node.hpp  variant_runner.cpp  variant_runner.hpp
plugins/: CMakeLists.txt
plugins/csvjson/: CMakeLists.txt  csvjson.cpp  csvjson.hpp
plugins/xlsx/: CMakeLists.txt  xlsx.cpp  xlsx.hpp
tests/: CMakeLists.txt  core_tests.cpp
ui/: CMakeLists.txt
ui/qml/: GraphView.qml  Main.qml  NodeItem.qml
ui/widgets/: MainWindow.cpp
